# cnpypp

./: CITATION.cff  CMakeLists.txt  README.md  c_interface.c  cnpy++.cpp  cnpy++.h  cnpy++.hpp  cnpy++_c_interface.c  cnpy.cpp  cnpy.hpp  ex_c.c  example1.cpp  example2.cpp  example_c.c  range_example.cpp  range_zip_example.cpp  stride_iterator.hpp  test.cpp  tuple_ex.cpp  tuple_util.hpp
examples/: example1.cpp  example2.cpp  example_c.c  npz_speedtest.cpp  range_example.cpp  range_zip_example.cpp  tuple_ex.cpp
include/: cnpy++.h  cnpy++.hpp  tuple_util.hpp
include/cnpy++/: buffer.hpp  map_type.hpp  tuple_util.hpp
src/: buffer.cpp  c_interface.c  cnpy++.cpp
